<resources>
    <string name="app_name">National Park Buddy</string>
    <string name="national_park_buddy">National Park Buddy!</string>
    <string name="version_1">Version 1</string>
    <string name="start">Start!</string>
    <string name="welcome">Welcome!\n</string>
    <string name="please_enter_your_username_and_password">Please enter your username and password!\n\n</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="arches">Arches</string>
    <string name="bryce_canyon">Bryce Canyon</string>
    <string name="canyonlands">Canyonlands</string>
    <string name="capitol_reef">Capitol Reef</string>
    <string name="zion">Zion</string>
    <string name="back">Back</string>
    <string name="select_parks_visited">Please select from the following which National Parks you have visited.</string>
    <string name="visited">Visited?</string>
    <string name="completed">Completed?</string>
    <string name="first_name">First Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="please_enter_your_username">Please enter your username</string>
    <string name="ive_visited">I\'ve visited.</string>
    <string name="ive_completed">I\'ve completed.</string>
    <string name="create_an_account">Create an account</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="logout">Logout</string>
    <string name="enter_notes">Enter any notes about the park here.</string>
    <string name="save_notes">Save Notes</string>
    <string name="number_of_visits">Number of Visits:</string>
</resources>