<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <TextView
                android:id="@+id/test"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text=""
                android:textSize="25sp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="16dp"/>

        <TextView
                android:id="@+id/parkDescription"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:text=""
                android:textSize="15sp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="16dp"/>

        <EditText
                android:id="@+id/parkNotes"
                android:text=""
                android:hint="@string/enter_notes"
                android:layout_width="match_parent"
                android:layout_height="131dp"
                android:gravity="center"
                android:layout_marginBottom="16dp"/>

        <TextView
                android:id="@+id/visitCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_visits"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

            <Button
                    android:id="@+id/increaseButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/increase"
                    android:layout_marginEnd="8dp"/>

            <Button
                    android:id="@+id/decreaseButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decrease"/>

        </LinearLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="355dp"
                android:padding="10dp" android:baselineAligned="false">

            <Button
                    android:id="@+id/backButton"
                    android:text="@string/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"/>
            <Button
                    android:id="@+id/saveButton"
                    android:text="Save Changes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
