<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="horizontal">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="28dp"
            android:background="#D3D3D3">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </androidx.cardview.widget.CardView>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#E0E0E0">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@color/purple_700"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_enter_your_username_and_password"
                    android:textColor="@color/purple_700"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"/>

            <EditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColorHint="@color/purple_700"
                    android:textColor="@color/purple_700"
                    android:hint="@string/username"/>

            <EditText
                    android:id="@+id/firstNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColorHint="@color/purple_700"
                    android:textColor="@color/purple_700"
                    android:hint="@string/first_name"/>

            <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:onClick="collectUserParkInfo"
                    android:text="@string/login"/>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:textColor="@color/purple_700"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="Welcome to your digital NPS Passport\n\nDeveloped by \nZindel"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintVertical_bias="0.898"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</LinearLayout>
