<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <TextView
                android:id="@+id/test"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text=""
                android:textSize="25sp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="16dp"/>

        <TextView
                android:id="@+id/parkDescription"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text=""
                android:textSize="15sp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="16dp"/>

        <EditText
                android:id="@+id/parkNotes"
                android:text=""
                android:hint="Enter any notes about the park here."
                android:layout_width="match_parent"
                android:layout_height="131dp"
                android:gravity="center"
                android:layout_marginBottom="16dp"/>
        <Button
                android:id="@+id/saveButton"
                android:text="Save Notes"
                android:layout_marginBottom="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        <TextView
                android:id="@+id/visitCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Number of Visits: 0"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

            <Button
                    android:id="@+id/increaseButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/increase"
                    android:onClick="parksVisitedIncrementer"
                    android:layout_marginEnd="8dp"/>

            <Button
                    android:id="@+id/decreaseButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="parksVisitedDecrementer"
                    android:text="@string/decrease"/>
        </LinearLayout>

        <Button
                android:id="@+id/backButton"
                android:text="@string/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"/>
        <Button
                android:id="@+id/logoutButton"
                android:text="@string/logout"
                android:layout_marginBottom="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"/>
    </LinearLayout>

</ScrollView>
